Breakpoints and header text are now aligning correctly in mobile chrome and safari, as well as windows chrome, firefox, and edge.

--- a/Source/Style/general.styl
+++ b/Source/Style/general.styl
@@ -2,16 +2,12 @@ backgroundColor = #ffffff
 highlightColor = #B82223
 midColor = #091221
 
-midWidth = 720px;
+midWidth = 764px;
 lowWidth = 550px;
 
 headerWidth = 153px;
 headerHeight = 50px;
-
-@font-face
-    font-family headers
-    font-style bold
-    src url(fonts/adam-cg-pro.otf)
+headers = 'Alegreya Sans SC', sans-serif;
 
 @font-face
     font-family general
