--- a/Source/Style/header.styl
+++ b/Source/Style/header.styl
@@ -14,19 +14,20 @@
 #title-container
     width: 100%;
     padding: 0px 17px; // top & bottom: 5px, l & r, 15 px.
+    margin: 0px;
     box-sizing: border-box;
 
 #title
     color: white;
     font-family: headers;
-    font-size: headerHeight - 10px;
+    font-size: headerHeight - 5px;
+    line-height: headerHeight;
 
 #menu
     box-sizing: border-box;
     align-items: center;
     background: midColor;
     width: 100%;
-
 
 /* --- BUTTON STYLE ---*/
 .header-button-divider
@@ -38,10 +39,10 @@
 .header-button
     color: white;
     font-family: headers;
-    font-size: 20px;
+    font-size: headerHeight - 20px;
     text-align: center;
-    line-height: 50px;
-    height: 50px;
+    line-height: headerHeight;
+    height: headerHeight;
     width: 100%;
 
 .header-button-active
