--- a/public/index.css
+++ b/public/index.css
@@ -1,9 +1,4 @@
 @font-face {
-  font-family: headers;
-  font-style: bold;
-  src: url("fonts/adam-cg-pro.otf");
-}
-@font-face {
   font-family: general;
   font-style: bold;
   src: url("fonts/Lora-Regular.ttf");
@@ -20,28 +15,22 @@
 .pages {
   min-height: calc(100% - 100px);
   border-top: 6px solid #b82223;
-  padding: 40px;
+  padding: 20px;
   box-sizing: border-box;
 }
 #footer {
   height: 100px;
   background-color: #666;
   width: 100%;
-  padding: 40px;
+  padding: 20px;
   box-sizing: border-box;
   color: #fff;
-  font-family: headers;
+  font-family: 'Alegreya Sans SC', sans-serif;
   box-shadow: 0px -2px 3px 0px rgba(0,0,0,0.4);
 }
-@media (max-width: 720px) {
+@media (max-width: 764px) {
   #main {
     width: calc(100% - 153px);
-  }
-  .pages {
-    padding: 20px;
-  }
-  #footer {
-    padding: 20px;
   }
 }
 @media (max-width: 550px) {
@@ -66,12 +55,14 @@
 #title-container {
   width: 100%;
   padding: 0px 17px;
+  margin: 0px;
   box-sizing: border-box;
 }
 #title {
   color: #fff;
-  font-family: headers;
-  font-size: 40px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 45px;
+  line-height: 50px;
 }
 #menu {
   box-sizing: border-box;
@@ -87,8 +78,8 @@
 }
 .header-button {
   color: #fff;
-  font-family: headers;
-  font-size: 20px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 30px;
   text-align: center;
   line-height: 50px;
   height: 50px;
@@ -205,8 +196,12 @@
   hyphens: auto;
 }
 .pages h1,
-h2 {
-  font-family: headers;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Alegreya Sans SC', sans-serif;
 }
 .pages a {
   color: #b82223;
